# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import visitorsRouter from "./visitors";
+import businessesRouter from "./businesses";
+import stampsRouter from "./stamps";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(visitorsRouter);
+router.use(businessesRouter);
+router.use(stampsRouter);
 
 export default router;
